Bug 491186 - Deleting Layer doesn't seem to count in Redo actions
Summary: Deleting Layer doesn't seem to count in Redo actions
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-02 18:54 UTC by acc4commissions
Modified: 2024-09-16 09:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2024-08-02 18:54:21 UTC
Happens in both nightly and stable builds

SUMMARY
Cannot "redo" deleting layer

STEPS TO REPRODUCE
1. Delete Layer 
2. Undo it with shortcut
3. Redo it with shortcut

OBSERVED RESULT
The layer is not deleted

EXPECTED RESULT
The layer should be deleted

SOFTWARE/OS VERSIONS
Windows: Windows 10 x64
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Freya Lupen 2024-08-02 19:09:25 UTC
Confirmed on 5.3.0-prealpha-f4e2b0070e and 5.2.2.

The reason for this is that there is a delay before Remove Layer appears in the Undo History. If undone with a shortcut before it appears there, it cannot be redone. This delay in Remove Layer is also visible in the Overview Docker.
Comment 2 Dmitry Kazakov 2024-09-16 09:21:33 UTC
Git commit 36d76c72d96ffc64d240ec61a6f45ac393f671cd by Dmitry Kazakov.
Committed on 16/09/2024 at 09:20.
Pushed by dkazakov into branch 'master'.

Fix redo actions to appear when undoing juggler-compressed actions

M  +20   -6    libs/ui/kis_node_juggler_compressed.cpp
M  +1    -1    libs/ui/kis_node_juggler_compressed.h

https://invent.kde.org/graphics/krita/-/commit/36d76c72d96ffc64d240ec61a6f45ac393f671cd
Comment 3 Dmitry Kazakov 2024-09-16 09:22:13 UTC
Git commit ce21f0aec9129e74b5876a91185207dcc3ff2277 by Dmitry Kazakov.
Committed on 16/09/2024 at 09:21.
Pushed by dkazakov into branch 'krita/5.2'.

Fix redo actions to appear when undoing juggler-compressed actions

M  +20   -6    libs/ui/kis_node_juggler_compressed.cpp
M  +1    -1    libs/ui/kis_node_juggler_compressed.h

https://invent.kde.org/graphics/krita/-/commit/ce21f0aec9129e74b5876a91185207dcc3ff2277