Fix redo actions to appear when undoing juggler-compressed actions

BUG:491186